--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kne/react-form",
-  "version": "3.0.0-beta.5",
+  "version": "3.0.0-beta.6",
   "description": "用于表单的校验",
   "syntax": {
     "esmodules": true
@@ -32,7 +32,7 @@
     }
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss}": [
       "prettier --config .prettierrc --write",
       "git add"
     ]
