--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kne/react-form",
-  "version": "3.0.0-beta.8",
+  "version": "3.0.0",
   "description": "用于表单的校验",
   "syntax": {
     "esmodules": true
