--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kne/react-form",
-  "version": "3.1.2",
-  "description": "用于表单的校验",
+  "version": "3.1.3",
+  "description": "react-form 是一个轻量级且功能强大的 React 表单库，专为现代化应用设计，提供了简洁的 API 和完整的表单管理解决方案。",
   "syntax": {
     "esmodules": true
   },
